--- a/3-Web-App/1-Web-App/notebook.ipynb
+++ b/3-Web-App/1-Web-App/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4 -157.803611  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "array(['us', nan, 'gb', 'ca', 'au', 'de'], dtype=object)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "24      3.0        3  51.783333   -0.783333"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,9 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "  n_iter_i = _check_optimize_result(\n",
+      "/home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages/sklearn/base.py:458: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -371,7 +373,7 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train.values, y_train.values)\n",
     "predictions = model.predict(X_test)\n",
     "\n",
     "print(classification_report(y_test, predictions))\n",
@@ -383,14 +385,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pickle Time"
+    "# Pickle (🥒) Time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "model_filename = 'ufo-model.pkl'\n",
