Currently working through 4-Classification

--- a/4-Classification/1-Introduction/notebook.ipynb
+++ b/4-Classification/1-Introduction/notebook.ipynb
@@ -746,9 +746,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3995 entries, 0 to 3994\n",
+      "Columns: 381 entries, cuisine to zucchini\n",
+      "dtypes: int64(380), object(1)\n",
+      "memory usage: 11.6+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Export to file\n",
     "transformed_df = pd.concat([transformed_label_df,transformed_feature_df],axis=1, join='outer')\n",
