--- a/4-Classification/3-Classifiers-2/notebook.ipynb
+++ b/4-Classification/3-Classifiers-2/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[5 rows x 382 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "Name: cuisine, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "[5 rows x 380 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,6 +452,157 @@
    "source": [
     "cuisines_feature_df = cuisines_df.drop(['Unnamed: 0', 'cuisine'], axis=1)\n",
     "cuisines_feature_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score,precision_score,confusion_matrix,classification_report, precision_recall_curve\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(cuisines_feature_df, cuisines_label_df, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Apply a linear SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = 10\n",
+    "# Create different classifiers.\n",
+    "classifiers = {\n",
+    "    # 'Linear SVC': SVC(kernel='linear', C=C, probability=True,random_state=0),\n",
+    "    # 'KNN classifier': KNeighborsClassifier(C),\n",
+    "    # 'SVC': SVC(),\n",
+    "    'RFST': RandomForestClassifier(n_estimators=100),\n",
+    "    'ADA': AdaBoostClassifier(n_estimators=100)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy (train) for Linear SVC: 78.0% \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     chinese       0.68      0.75      0.72       240\n",
+      "      indian       0.90      0.87      0.88       247\n",
+      "    japanese       0.76      0.69      0.72       259\n",
+      "      korean       0.80      0.78      0.79       232\n",
+      "        thai       0.77      0.83      0.80       221\n",
+      "\n",
+      "    accuracy                           0.78      1199\n",
+      "   macro avg       0.78      0.78      0.78      1199\n",
+      "weighted avg       0.78      0.78      0.78      1199\n",
+      "\n",
+      "Accuracy (train) for KNN classifier: 73.2% \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     chinese       0.59      0.74      0.66       240\n",
+      "      indian       0.88      0.80      0.84       247\n",
+      "    japanese       0.65      0.82      0.73       259\n",
+      "      korean       0.90      0.55      0.68       232\n",
+      "        thai       0.78      0.73      0.76       221\n",
+      "\n",
+      "    accuracy                           0.73      1199\n",
+      "   macro avg       0.76      0.73      0.73      1199\n",
+      "weighted avg       0.76      0.73      0.73      1199\n",
+      "\n",
+      "Accuracy (train) for SVC: 83.1% \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     chinese       0.75      0.74      0.75       240\n",
+      "      indian       0.93      0.91      0.92       247\n",
+      "    japanese       0.82      0.78      0.80       259\n",
+      "      korean       0.86      0.84      0.85       232\n",
+      "        thai       0.80      0.89      0.84       221\n",
+      "\n",
+      "    accuracy                           0.83      1199\n",
+      "   macro avg       0.83      0.83      0.83      1199\n",
+      "weighted avg       0.83      0.83      0.83      1199\n",
+      "\n",
+      "Accuracy (train) for RFST: 83.0% \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     chinese       0.74      0.78      0.76       240\n",
+      "      indian       0.93      0.90      0.92       247\n",
+      "    japanese       0.85      0.75      0.80       259\n",
+      "      korean       0.84      0.85      0.85       232\n",
+      "        thai       0.79      0.88      0.83       221\n",
+      "\n",
+      "    accuracy                           0.83      1199\n",
+      "   macro avg       0.83      0.83      0.83      1199\n",
+      "weighted avg       0.83      0.83      0.83      1199\n",
+      "\n",
+      "Accuracy (train) for ADA: 67.2% \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     chinese       0.64      0.43      0.51       240\n",
+      "      indian       0.84      0.86      0.85       247\n",
+      "    japanese       0.62      0.60      0.61       259\n",
+      "      korean       0.62      0.74      0.67       232\n",
+      "        thai       0.64      0.74      0.69       221\n",
+      "\n",
+      "    accuracy                           0.67      1199\n",
+      "   macro avg       0.67      0.67      0.67      1199\n",
+      "weighted avg       0.67      0.67      0.67      1199\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_classifiers = len(classifiers)\n",
+    "\n",
+    "for index, (name, classifier) in enumerate(classifiers.items()):\n",
+    "    classifier.fit(X_train, np.ravel(y_train))\n",
+    "\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    print(\"Accuracy (train) for %s: %0.1f%% \" % (name, accuracy * 100))\n",
+    "    print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
    ]
   }
  ],
