--- a/5-Clustering/1-Visualize/notebook.ipynb
+++ b/5-Clustering/1-Visualize/notebook.ipynb
@@ -17,17 +17,17 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: seaborn in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (0.13.0)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.3 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from seaborn) (3.8.0)\n",
       "Requirement already satisfied: pandas>=1.2 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from seaborn) (2.1.1)\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from seaborn) (1.26.1)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.3 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from seaborn) (3.8.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (3.1.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.4.5)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.1.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (0.12.1)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (10.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (4.43.1)\n",
       "Requirement already satisfied: packaging>=20.0 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (23.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.4.5)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (3.1.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (4.43.1)\n",
       "Requirement already satisfied: tzdata>=2022.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2023.3.post1)\n",
       "Requirement already satisfied: six>=1.5 in /home/kalebkei/AIResearch/ML-For-Beginners/.venv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.3->seaborn) (1.16.0)\n",
@@ -635,7 +635,8 @@
     "df['popularity'] = pd.to_numeric(df['popularity'], errors='coerce')\n",
     "corrmat = df.corr()\n",
     "f, ax = plt.subplots(figsize=(12, 9))\n",
-    "sns.heatmap(corrmat, vmax=.8, square=True)"
+    "sns.heatmap(corrmat, vmax=.8, square=True)\n",
+    "\n"
    ]
   },
   {
